<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".mob3.LoginActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo"
            app:civ_border_color="@color/primary"
            app:civ_border_width="2dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Log in" />

        <TextView
            android:id="@+id/textview_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:text="Register now"
            android:textAllCaps="true"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/divider"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OR"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/divider"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_facebook"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="Log in with facebook"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_twiter"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/twiter"
            android:drawableLeft="@drawable/ic_twitter"
            android:text="Log in with twiter"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_google"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/google"
            android:drawableLeft="@drawable/ic_google"
            android:text="Log in with google"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>
